--- a/8_neuralnets.ipynb
+++ b/8_neuralnets.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import statsmodels.api as sm"
+    "import statsmodels.api as sm\n",
+    "\n",
+    "import torch \n",
+    "import torchvision\n",
+    "import torch.nn as nn\n",
+    "import torchvision.transforms as transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +74,274 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tensors"
+    "## Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TBD"
+    "Neural Networks in their basic form are just a modification of liner regression. Imagine you had the following model with one dependent variable and two explanatory variables\n",
+    "\n",
+    "$$\n",
+    "y = f(x_1, x_2)\n",
+    "$$\n",
+    "\n",
+    "One simple model that we could build is the linear model\n",
+    "\n",
+    "$$\n",
+    "y = \\beta_1 x_1 + \\beta_2 x_2\n",
+    "$$\n",
+    "\n",
+    "We can express the data as a `numpy` array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_np = np.arange(6).reshape((3, 2))\n",
+    "x_np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or equivalently as a `pytorch` tensor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 1],\n",
+       "        [2, 3],\n",
+       "        [4, 5]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tensor = torch.from_numpy(x_np)\n",
+    "x_tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also translate tensors back to arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor2array = x_tensor.numpy()\n",
+    "tensor2array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can make operations over this data. For example we can take the mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can only calculate the mean of floating types. Got Long instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    torch.mean(x_tensor)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first have to convert the data in float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1.],\n",
+       "        [2., 3.],\n",
+       "        [4., 5.]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_tensor = torch.FloatTensor(x_np)\n",
+    "x_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5 \n",
+      "\n",
+      " tensor(2.5000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(x_np), '\\n\\n', torch.mean(x_tensor))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also apply compontent-wise functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.84147098]\n",
+      " [ 0.90929743  0.14112001]\n",
+      " [-0.7568025  -0.95892427]] \n",
+      "\n",
+      " tensor([[ 0.0000,  0.8415],\n",
+      "        [ 0.9093,  0.1411],\n",
+      "        [-0.7568, -0.9589]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sin(x_np), '\\n\\n', torch.sin(x_tensor))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can multiply tensors as we multiply matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[20 26]\n",
+      " [26 35]] \n",
+      "\n",
+      " tensor([[20., 26.],\n",
+      "        [26., 35.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.matmul(x_np.T, x_np), '\\n\\n', torch.mm(x_tensor.T, x_tensor))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But the element-wise multiplication does not work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1D tensors expected, but got 2D and 2D tensors\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    x_tensor.dot(x_tensor)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
