--- a/7_trees.ipynb
+++ b/7_trees.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decision trees involve stratifying or segmenting the predictor space into a number of simple regions. In order to make a prediction for a given observation, we typically use the mean or the mode of the training observations in the region to which it belongs. Since the set of splitting rules used to segment the predictor space can be summarized in a tree, these types of approaches are known as decision tree methods."
+    "Decision trees involve **segmenting the predictor space into a number of simple regions**. In order to make a prediction for a given observation, we typically use the mean or the mode of the training observations in the region to which it belongs. Since the set of splitting rules used to segment the predictor space can be summarized in a tree, these types of approaches are known as decision tree methods."
    ]
   },
   {
@@ -319,6 +319,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are actually going to use log(salary) since it has a more gaussian distribution."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -347,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We fit a regression three with 3 leaf nodes."
+    "In order to understand what is a tree, let's first have a look at one. We fit a regression three with 3 leaves or, equivalently put, 2 nodes."
    ]
   },
   {
@@ -418,7 +425,9 @@
     "These three regions can be written as \n",
     "1. **R1** = {X | `Years`<4.5}\n",
     "2. **R2** = {X | `Years`>=4.5, `Hits`<117.5}, and \n",
-    "3. **R3** = {X | `Years`>=4.5, `Hits`>=117.5}. "
+    "3. **R3** = {X | `Years`>=4.5, `Hits`>=117.5}. \n",
+    "\n",
+    "Since the dimension of $X$ is 2, we can visualize the space and the regions in a 2-dimensional graph."
    ]
   },
   {
@@ -458,6 +467,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We might **interpret** the above regression tree as follows: Years is the most important factor in determining Salary, and players with less experience earn lower salaries than more experienced players. Given that a player is less experienced, the number of hits that he made in the previous year seems to play little role in his salary. But among players who have been in the major leagues for five or more years, the number of hits made in the previous year does affect salary, and players who made more hits last year tend to have higher salaries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Building a tree"
    ]
   },
@@ -490,6 +506,297 @@
     "\n",
     "4. we choose the predictor and cutpoint such that the resulting tree has the lowest RSS\n",
     "6. we keep repeating (1)-(4) until a certain condition is met. However, after the first iteration we also have to pick which region to split which adds a further dimension to optimize over."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    \"\"\"\n",
+    "    Class used to represent nodes in a Regression Tree\n",
+    "    \n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    x : np.array\n",
+    "        independent variables\n",
+    "    y : np.array\n",
+    "        dependent variables\n",
+    "    idxs : np.array\n",
+    "        indexes fo x and y for current node\n",
+    "    depth : int\n",
+    "        depth of the sub-tree (default 5)\n",
+    "\n",
+    "    Methods\n",
+    "    -------\n",
+    "    find_next_nodes(self)\n",
+    "        Keep growing the tree\n",
+    "        \n",
+    "    find_best_split(self)\n",
+    "        Find the best split\n",
+    "        \n",
+    "    split(self)\n",
+    "        Split the tree\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, x, y, idxs, depth=5):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.idxs = idxs \n",
+    "        self.depth = depth\n",
+    "        self.find_next_nodes()\n",
+    "        \n",
+    "    def find_next_nodes(self):\n",
+    "        if self.is_last_leaf: return # Stop if last leaf \n",
+    "        self.find_best_split()       # Get best split\n",
+    "        self.split()                 # Split\n",
+    "        \n",
+    "    def find_best_split(self):\n",
+    "        score = float('inf')\n",
+    "        # Loop over variables\n",
+    "        for col in range(self.x.shape[1]):\n",
+    "            x = self.x[self.idxs, col]\n",
+    "            # Loop over all splits\n",
+    "            for row in range(x.shape[0]):\n",
+    "                lhs = x <= x[row]\n",
+    "                rhs = x > x[row]\n",
+    "                curr_score = self.get_score(lhs, rhs)\n",
+    "                # If best score, save it \n",
+    "                if curr_score < score: \n",
+    "                    score = curr_score\n",
+    "                    self.split_col = col\n",
+    "                    self.split_val = x[row]\n",
+    "        \n",
+    "        return self\n",
+    "                \n",
+    "    def get_score(self, lhs, rhs):\n",
+    "        y = self.y[self.idxs]\n",
+    "        lhs_mse = self.get_mse(y[lhs])\n",
+    "        rhs_mse = self.get_mse(y[rhs])\n",
+    "        return lhs_mse * lhs.sum() + rhs_mse * rhs.sum()\n",
+    "    \n",
+    "    def get_mse(self, y): return np.mean((y-np.mean(y))**2)\n",
+    "      \n",
+    "    def split(self): \n",
+    "        x = self.x[self.idxs, self.split_col]\n",
+    "        lhs = x <= self.split_val\n",
+    "        rhs = x > self.split_val\n",
+    "        self.lhs = Node(self.x, self.y, self.idxs[lhs], self.depth-1)\n",
+    "        self.rhs = Node(self.x, self.y, self.idxs[rhs], self.depth-1)\n",
+    "        to_print = (self.depth, self.split_col, self.split_val, sum(lhs), sum(rhs))\n",
+    "        print('Split on layer %.0f: var%1.0f = %.4f (%.0f/%.0f)' % to_print)\n",
+    "        return self\n",
+    "                \n",
+    "    @property\n",
+    "    def is_last_leaf(self): return self.depth<=1      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    Class used to represent nodes in a Regression Tree\n",
+      "    \n",
+      "    Attributes\n",
+      "    ----------\n",
+      "    x : np.array\n",
+      "        independent variables\n",
+      "    y : np.array\n",
+      "        dependent variables\n",
+      "    idxs : np.array\n",
+      "        indexes fo x and y for current node\n",
+      "    depth : int\n",
+      "        depth of the sub-tree (default 5)\n",
+      "\n",
+      "    Methods\n",
+      "    -------\n",
+      "    find_next_nodes(self)\n",
+      "        Keep growing the tree\n",
+      "        \n",
+      "    find_best_split(self)\n",
+      "        Find the best split\n",
+      "        \n",
+      "    split(self)\n",
+      "        Split the tree\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Init first node\n",
+    "tree1 = Node(X, y, np.arange(len(y)), 1)\n",
+    "\n",
+    "# Documentation\n",
+    "print(tree1.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'depth',\n",
+       " 'find_best_split',\n",
+       " 'find_next_nodes',\n",
+       " 'get_mse',\n",
+       " 'get_score',\n",
+       " 'idxs',\n",
+       " 'is_last_leaf',\n",
+       " 'split',\n",
+       " 'x',\n",
+       " 'y']"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inspect the class\n",
+    "dir(tree1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree of depth 1 with 263 observations\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get info\n",
+    "print('Tree of depth %.0f with %.0f observations' % (tree1.depth, len(tree1.idxs)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if terminal\n",
+    "tree1.is_last_leaf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split at var0 = 4.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find best split\n",
+    "tree1.find_best_split()\n",
+    "print('Split at var%1.0f = %.4f' % (tree1.split_col, tree1.split_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split on layer 1: var0 = 4.0000 (90/173)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split tree\n",
+    "tree1.split();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we are ready to split the whole tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split on layer 2: var1 = 4.0000 (2/88)\n",
+      "Split on layer 2: var1 = 117.0000 (90/83)\n",
+      "Split on layer 3: var0 = 4.0000 (90/173)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check depth-3 tree\n",
+    "node = Node(X, y, np.arange(len(y)), 3)"
    ]
   },
   {
