--- a/7_trees.ipynb
+++ b/7_trees.ipynb
@@ -511,13 +511,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
+    "    \"\"\"\n",
+    "    Class used to represent nodes in a Regression Tree\n",
+    "    \n",
+    "    Attributes\n",
+    "    ----------\n",
+    "    x : np.array\n",
+    "        independent variables\n",
+    "    y : np.array\n",
+    "        dependent variables\n",
+    "    idxs : np.array\n",
+    "        indexes fo x and y for current node\n",
+    "    depth : int\n",
+    "        depth of the sub-tree (default 5)\n",
+    "\n",
+    "    Methods\n",
+    "    -------\n",
+    "    find_next_nodes(self)\n",
+    "        Keep growing the tree\n",
+    "        \n",
+    "    find_best_split(self)\n",
+    "        Find the best split\n",
+    "        \n",
+    "    split(self)\n",
+    "        Split the tree\n",
+    "    \"\"\"\n",
     "    \n",
     "    def __init__(self, x, y, idxs, depth=5):\n",
+    "        \"\"\"Initialize node\"\"\"\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.idxs = idxs \n",
@@ -525,11 +551,13 @@
     "        self.get_next_nodes()\n",
     "\n",
     "    def get_next_nodes(self):\n",
-    "        if self.is_last_leaf: return # Stop if last leaf \n",
-    "        self.find_best_split()       # Get best split\n",
-    "        self.split()\n",
+    "        \"\"\"If the node is not terminal, get further splits\"\"\"\n",
+    "        if self.depth<=1: return \n",
+    "        self.find_best_split()       \n",
+    "        self.split()             \n",
     "        \n",
     "    def find_best_split(self):\n",
+    "        \"\"\"Loop over variables and their values to find the best split\"\"\"\n",
     "        best_score = float('inf')\n",
     "        # Loop over variables\n",
     "        for col in range(self.x.shape[1]):\n",
@@ -547,12 +575,14 @@
     "        return self\n",
     "    \n",
     "    def get_score(self, lhs, rhs):\n",
+    "        \"\"\"Get score of a given split\"\"\"\n",
     "        y = self.y[self.idxs]\n",
     "        lhs_std = y[lhs].std()\n",
     "        rhs_std = y[rhs].std()\n",
     "        return lhs_std * lhs.sum() + rhs_std * rhs.sum()\n",
     "        \n",
     "    def split(self): \n",
+    "        \"\"\"Split a node into 2 sub-nodes (recursive)\"\"\"\n",
     "        x = self.x[self.idxs, self.split_col]\n",
     "        lhs = x <= self.split_val\n",
     "        rhs = x > self.split_val\n",
@@ -560,10 +590,7 @@
     "        self.rhs = Node(self.x, self.y, self.idxs[rhs], self.depth-1)\n",
     "        to_print = (self.depth, self.split_col, self.split_val, sum(lhs), sum(rhs))\n",
     "        print('Split on layer %.0f: var%1.0f = %.4f (%.0f/%.0f)' % to_print)\n",
-    "        return self\n",
-    "    \n",
-    "    @property\n",
-    "    def is_last_leaf(self): return self.depth<=1   "
+    "        return self"
    ]
   },
   {
