--- a/7_trees.ipynb
+++ b/7_trees.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,14 +595,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "\n",
+      "    Class used to represent nodes in a Regression Tree\n",
+      "    \n",
+      "    Attributes\n",
+      "    ----------\n",
+      "    x : np.array\n",
+      "        independent variables\n",
+      "    y : np.array\n",
+      "        dependent variables\n",
+      "    idxs : np.array\n",
+      "        indexes fo x and y for current node\n",
+      "    depth : int\n",
+      "        depth of the sub-tree (default 5)\n",
+      "\n",
+      "    Methods\n",
+      "    -------\n",
+      "    find_next_nodes(self)\n",
+      "        Keep growing the tree\n",
+      "        \n",
+      "    find_best_split(self)\n",
+      "        Find the best split\n",
+      "        \n",
+      "    split(self)\n",
+      "        Split the tree\n",
+      "    \n"
      ]
     }
    ],
@@ -610,7 +634,7 @@
     "# Init first node\n",
     "tree1 = Node(X, y, np.arange(len(y)), 1)\n",
     "\n",
-    "# Documentation\n",
+    "# Documentation (always comment and document your code!!)\n",
     "print(tree1.__doc__)"
    ]
   },
