--- a/8_neuralnets.ipynb
+++ b/8_neuralnets.ipynb
@@ -1947,12 +1947,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Deep Neural Networks and Deep Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deep Neural Networks are just Neural Networks with more than one hidden layer."
    ]
   },
   {
@@ -1985,29 +1990,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recurrent Neural Nets"
+    "### Recursive Neural Nets"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recursive Neural Nets"
+    "Recursive neural networks are ne"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Recurrent Neural Nets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recurrent Neural Networks are often applied in contexts in which the data generating process is dynamic. The most important example is Natural Language Processing. The idea is that you want to make predictions \"live\" as data comes in. Moreover, the order of the data is relevant, so that you also what to keep track of what the model has learned so far.\n",
+    "\n",
+    "While RNNs learn similarly while training, in addition, they remember things learnt from prior input(s) while generating output(s). It’s part of the network. RNNs can take one or more input vectors and produce one or more output vectors and the output(s) are influenced not just by weights applied on inputs like a regular NN, but also by a “hidden” state vector representing the context based on prior input(s)/output(s). So, the same input could produce a different output depending on previous inputs in the series.\n",
+    " \n",
+    "<img src=\"figures/rnn1.png\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "In summary, in a vanilla neural network, a fixed size input vector is transformed into a fixed size output vector. Such a network becomes “recurrent” when you repeatedly apply the transformations to a series of given input and produce a series of output vectors."
+   ]
   },
   {
    "cell_type": "markdown",
