--- a/9_postdoubleselection.ipynb
+++ b/9_postdoubleselection.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
        "5   0.071985  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1325,10 +1325,10 @@
        "  <th></th>                    <td></td>        <td></td>     <td>(0.40)</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Africa</th>              <td></td>        <td></td>     <td>-1.06**</td>\n",
+       "  <th>Asia</th>                <td></td>        <td></td>     <td>-0.74*</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th></th>                    <td></td>        <td></td>     <td>(0.41)</td> \n",
+       "  <th></th>                    <td></td>        <td></td>     <td>(0.42)</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Samer</th>               <td></td>        <td></td>      <td>-0.12</td> \n",
@@ -1337,10 +1337,10 @@
        "  <th></th>                    <td></td>        <td></td>     <td>(0.42)</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Asia</th>                <td></td>        <td></td>     <td>-0.74*</td> \n",
+       "  <th>Africa</th>              <td></td>        <td></td>     <td>-1.06**</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th></th>                    <td></td>        <td></td>     <td>(0.42)</td> \n",
+       "  <th></th>                    <td></td>        <td></td>     <td>(0.41)</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>R-squared</th>         <td>0.54</td>    <td>0.56</td>    <td>0.71</td>  \n",
@@ -1370,12 +1370,12 @@
        "                         (2.86)  (2.48) \n",
        "Namer                            -0.17  \n",
        "                                 (0.40) \n",
-       "Africa                           -1.06**\n",
-       "                                 (0.41) \n",
-       "Samer                            -0.12  \n",
-       "                                 (0.42) \n",
        "Asia                             -0.74* \n",
        "                                 (0.42) \n",
+       "Samer                            -0.12  \n",
+       "                                 (0.42) \n",
+       "Africa                           -1.06**\n",
+       "                                 (0.41) \n",
        "R-squared        0.54    0.56    0.71   \n",
        "R-squared Adj.   0.53    0.54    0.67   \n",
        "No. observations 64      64      64     \n",
@@ -1385,7 +1385,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 129,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,30 +1561,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge    : 0.4944\n",
-      "Lasso    : -0.1532\n",
-      "Tree     : 1.0708\n",
-      "Forest   : 2.1273\n",
-      "Boosting : 1.4195\n"
+      "Ridge    : -0.2711\n",
+      "Lasso    : 9.5116\n",
+      "Tree     : -1.2490\n",
+      "Forest   : 0.4924\n",
+      "Boosting : 1.4658\n"
      ]
     }
    ],
    "source": [
     "# Loop over algorithms\n",
     "for alg_name, algorithm in algorithms.items():\n",
-    "    ddml(algorithm, alg_name, D, X_poly, y, Z, verbose=True)"
+    "    ddml(algorithm, alg_name, D, X, y, Z, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
