--- a/9_postdoubleselection.ipynb
+++ b/9_postdoubleselection.ipynb
@@ -658,12 +658,14 @@
     " - pre-testing is clearlly a problem in finite samples\n",
     " - all our econometric results are based on the assumption that $n \\to \\infty$\n",
     "\n",
-    "The problem is solved "
+    "The problem is solved by assuming that the value of $\\beta_0$ depends on the sample size. This might seems like a weird assumption but is just to have an asymptotically meaningful concept of \"big\" and \"small\".\n",
+    "\n",
+    "We now look at what happens in the simulations when $beta_0$ is proportional to $\\frac{1}{\\sqrt{n}}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
